--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <aside class="menu main-bg">
         <div class="main-content menu-content">
-            <a href="#"><img src="assets/img/logo-3.png" alt="Tico"></a>
+            <a href="#principal"><img class="logo" src="assets/img/logo-3.png" alt="Tico"></a>
 
             <div class="triangulo"></div>
 
@@ -28,7 +28,7 @@
 
             <nav>
                 <ul>
-                    <li><a href="#">Sobre</a></li>
+                    <li><a href="#sobre">Sobre</a></li>
                     <li><a href="#">Tipos</a></li>
                     <li><a href="#">Fotos</a></li>
                     <li><a href="#">Tico</a></li>
@@ -38,17 +38,72 @@
         </div>
     </aside>
 
-    <div class="menu-spacing"></div>
+    <div class="spacing"></div>
 
-    <section class="section main-bg">
-        <h1>Título</h1>
+    <section id="principal" class="section main-bg">
+        <div class="main-content">
+            <h3>Características, comportamento e cuidados com a saúde: tudo sobre os salsichinhas!</h3>
+            <div class="main-content">
+                <img class="puppies puppies-content" src="assets/img/puppies.jpg" alt="Filhotinhos de Salsichinha">
+            </div>
+            <p>Cachorro salsicha, Dachshund ou teckel: muitos são os nomes que definem essa raça de cães. Bem
+                agitados e
+                cheios de energia, o cãozinho de corpo alongado e patas curtas tornam qualquer brincadeira mais
+                animada
+                ainda, pois amam diversão e se dão super bem com crianças. A fama de bagunceiro pode até ter um
+                fundo de
+                verdade, mas o Dachshund é um cãozinho que, certamente, vai te conquistar e se tornará seu melhor
+                amigo
+                em
+                pouco tempo. O Patas da Casa preparou um guia completo para você conhecer as principais
+                características,
+                cuidados e comportamentos sobre o cachorro salsicha.</p>
     </section>
 
+    <div class="spacing"></div>
+
+    <section id="sobre" class="section white-bg">
+
+    <div class="text-spacing">
+        <h4 class="fill">Cães da raça podem ter relação de amor e fidelidade com seus tutores</h4>
+        <p class="fill">Reconhecer um cão Dachshund não é nada difícil. Nas ruas, é conhecido como cachorro salsicha ou
+            linguicinha pelo corpo mais comprido e perninhas bem curtas, formato que se assemelha muito a esses
+            alimentos. Também chamado teckel, o Dachshund é um excelente farejador devido ao seu focinho longo.
+            Com o olhar sempre atento e curioso, esses cãezinhos estão sempre de olho em tudo que acontece à sua
+            volta. É por isso que são bem protetores com seus tutores. Aliás, você sabia que a melhor parte de
+            ter um amiguinho da raça salsicha é que ele é extremamente fiel? Eles são capazes de criarem um
+            forte vínculo com seus donos. Ou seja: é um cachorro que sempre estará ao seu lado em todos os
+            momentos!</p>
+        <div class="spacing"></div>
+
+        <h4 class="fill">Personalidade e Comportamento</h4>
+        <p class="fill">Por mais brincalhão que o salsichinha seja, é preciso entender que eles também pode ser muito
+            temperamental - o que não quer dizer que seja agressivo. Por serem cães muito vigilantes, o que pode
+            acontecer é o cachorro ter um instinto protetor mais aguçado. Por isso, quando uma pessoa
+            desconhecida se aproxima é normal o animal estranhar e reagir de uma forma um pouco inesperada e até
+            agressiva. Normalmente, o cachorro logo se acostuma com a pessoa.</p>
+        <div class="less-spacing"></div>
+        <p class="fill">Este tipo de comportamento pode ser facilmente corrigido com alguns treinamentos: o adestramento
+            costuma ser muito eficaz para evitar que seu pet fique exaltado sem necessidade. Inclusive, o cão
+            salsicha pode acabar ficando mal acostumado se não receber limites, já que a tendência é que eles
+            criem suas próprias regras na rotina. Latidos e rosnadas podem se tornar comuns em qualquer ameaça,
+            mas dificilmente partem para o ataque. O adestramento pode deixar esse processo mais tranquilo.</p>
+
+        <div class="less-spacing"></div>
+        <h4 class="fill">Cuidados com a pelagem do cachorro salsicha</h4>
+        <p class="fill">O Dachshund é uma raça que pode apresentar até três tipos de pelagem: curto, duro e longo. Além
+            disso, a coloração pode ser mais uniforme, bicolor e até manchada - uma forma comum é a pelagem do
+            Dachshund arlequim, com uma base escura e manchas mais claras. O cuidado e escovação vai depender
+            justamente do tamanho dos pelos. Os cães com a pelagem curta precisam de uma escovação por semana e
+            a tosa pode ser necessária de tempos em tempos (é importante sempre observar o seu bichinho). Já os
+            cachorros com pelos mais duros ou longos precisam ser escovados de duas a três vezes por semana para
+            evitar o embaraçamento. Neste caso, as tosas devem ser mais frequentes também.</p>
+    </div>
+
+
     <section class="section white-bg">
-        <h1 class="fill">Títuloooooooooooooooooooooooooooooooo</h1>
-        <p class="fill">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum dicta molestias aperiam magnam debitis
-            pariatur assumenda, perferendis facilis officiis, nesciunt corrupti at! Rem, quibusdam debitis molestiae
-            asperiores est excepturi magni.</p>
+        <h1 class="fill"></h1>
+        <p class="fill"></p>
     </section>
 </body>
 
