"sobre" section done

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <aside class="menu main-bg">
         <div class="main-content menu-content">
-            <a href="#principal"><img class="logo" src="assets/img/logo-3.png" alt="Tico"></a>
+            <a href="#"><img class="logo" src="assets/img/logo-3.png" alt="Tico"></a>
 
             <div class="triangulo"></div>
 
@@ -38,73 +38,113 @@
         </div>
     </aside>
 
-    <div class="spacing"></div>
+    <div class="menu-spacing"></div>
 
-    <section id="principal" class="section main-bg">
+    <section class="section main-bg">
         <div class="main-content">
-            <h3>Características, comportamento e cuidados com a saúde: tudo sobre os salsichinhas!</h3>
+            <h3>Características, comportamento e cuidados com a saúde<strong>:</strong> tudo sobre os salsichinhas!</h3>
             <div class="main-content">
                 <img class="puppies puppies-content" src="assets/img/puppies.jpg" alt="Filhotinhos de Salsichinha">
             </div>
-            <p>Cachorro salsicha, Dachshund ou teckel: muitos são os nomes que definem essa raça de cães. Bem
-                agitados e
-                cheios de energia, o cãozinho de corpo alongado e patas curtas tornam qualquer brincadeira mais
-                animada
-                ainda, pois amam diversão e se dão super bem com crianças. A fama de bagunceiro pode até ter um
-                fundo de
-                verdade, mas o Dachshund é um cãozinho que, certamente, vai te conquistar e se tornará seu melhor
-                amigo
-                em
-                pouco tempo. O Patas da Casa preparou um guia completo para você conhecer as principais
-                características,
-                cuidados e comportamentos sobre o cachorro salsicha.</p>
+            <p>
+                Cachorro salsicha, Dachshund ou teckel <strong>:</strong> muitos são os nomes que definem essa raça de cães. Bem
+                agitados e cheios de energia, o cãozinho de corpo alongado e patas curtas tornam qualquer brincadeira mais
+                animada ainda, pois amam diversão e se dão super bem com crianças. A fama de bagunceiro pode até ter um
+                fundo de verdade, mas o Dachshund é um cãozinho que, certamente, vai te conquistar e se tornará seu melhor
+                amigo em pouco tempo. O Patas da Casa preparou um guia completo para você conhecer as principais
+                características, cuidados e comportamentos sobre o cachorro salsicha.</p>
     </section>
 
     <div class="spacing"></div>
 
     <section id="sobre" class="section white-bg">
 
-    <div class="text-spacing">
-        <h4 class="fill">Cães da raça podem ter relação de amor e fidelidade com seus tutores</h4>
-        <p class="fill">Reconhecer um cão Dachshund não é nada difícil. Nas ruas, é conhecido como cachorro salsicha ou
-            linguicinha pelo corpo mais comprido e perninhas bem curtas, formato que se assemelha muito a esses
-            alimentos. Também chamado teckel, o Dachshund é um excelente farejador devido ao seu focinho longo.
-            Com o olhar sempre atento e curioso, esses cãezinhos estão sempre de olho em tudo que acontece à sua
-            volta. É por isso que são bem protetores com seus tutores. Aliás, você sabia que a melhor parte de
-            ter um amiguinho da raça salsicha é que ele é extremamente fiel? Eles são capazes de criarem um
-            forte vínculo com seus donos. Ou seja: é um cachorro que sempre estará ao seu lado em todos os
-            momentos!</p>
-        <div class="spacing"></div>
-
-        <h4 class="fill">Personalidade e Comportamento</h4>
-        <p class="fill">Por mais brincalhão que o salsichinha seja, é preciso entender que eles também pode ser muito
-            temperamental - o que não quer dizer que seja agressivo. Por serem cães muito vigilantes, o que pode
-            acontecer é o cachorro ter um instinto protetor mais aguçado. Por isso, quando uma pessoa
-            desconhecida se aproxima é normal o animal estranhar e reagir de uma forma um pouco inesperada e até
-            agressiva. Normalmente, o cachorro logo se acostuma com a pessoa.</p>
-        <div class="less-spacing"></div>
-        <p class="fill">Este tipo de comportamento pode ser facilmente corrigido com alguns treinamentos: o adestramento
-            costuma ser muito eficaz para evitar que seu pet fique exaltado sem necessidade. Inclusive, o cão
-            salsicha pode acabar ficando mal acostumado se não receber limites, já que a tendência é que eles
-            criem suas próprias regras na rotina. Latidos e rosnadas podem se tornar comuns em qualquer ameaça,
-            mas dificilmente partem para o ataque. O adestramento pode deixar esse processo mais tranquilo.</p>
-
-        <div class="less-spacing"></div>
-        <h4 class="fill">Cuidados com a pelagem do cachorro salsicha</h4>
-        <p class="fill">O Dachshund é uma raça que pode apresentar até três tipos de pelagem: curto, duro e longo. Além
-            disso, a coloração pode ser mais uniforme, bicolor e até manchada - uma forma comum é a pelagem do
-            Dachshund arlequim, com uma base escura e manchas mais claras. O cuidado e escovação vai depender
-            justamente do tamanho dos pelos. Os cães com a pelagem curta precisam de uma escovação por semana e
-            a tosa pode ser necessária de tempos em tempos (é importante sempre observar o seu bichinho). Já os
-            cachorros com pelos mais duros ou longos precisam ser escovados de duas a três vezes por semana para
-            evitar o embaraçamento. Neste caso, as tosas devem ser mais frequentes também.</p>
-    </div>
-
-
-    <section class="section white-bg">
-        <h1 class="fill"></h1>
-        <p class="fill"></p>
-    </section>
+        <div class="text-spacing">
+            <article>
+                <h4 class="fill">Cães da raça podem ter relação de amor e fidelidade com seus tutores</h4>
+                <p class="fill">
+                    Reconhecer um cão Dachshund não é nada difícil. Nas ruas, é conhecido como cachorro
+                    salsicha ou linguicinha pelo corpo mais comprido e perninhas bem curtas, formato que se assemelha muito a esses
+                    alimentos. Também chamado teckel, o Dachshund é um excelente farejador devido ao seu focinho longo.
+                    Com o olhar sempre atento e curioso, esses cãezinhos estão sempre de olho em tudo que acontece à sua
+                    volta. É por isso que são bem protetores com seus tutores. Aliás, você sabia que a melhor parte de
+                    ter um amiguinho da raça salsicha é que ele é extremamente fiel? Eles são capazes de criarem um
+                    forte vínculo com seus donos. Ou seja<strong>:</strong> é um cachorro que sempre estará ao seu lado em todos os
+                    momentos!</p>
+            </article>
+            <article>
+                <h4 class="fill">Personalidade e Comportamento</h4>
+                <p class="fill">
+                    Por mais brincalhão que o salsichinha seja, é preciso entender que eles também pode ser
+                    muito temperamental - o que não quer dizer que seja agressivo. Por serem cães muito vigilantes, o que pode
+                    acontecer é o cachorro ter um instinto protetor mais aguçado. Por isso, quando uma pessoa
+                    desconhecida se aproxima é normal o animal estranhar e reagir de uma forma um pouco inesperada e até
+                    agressiva. Normalmente, o cachorro logo se acostuma com a pessoa.</p>
+                <p class="fill" style="margin-top: 20px;">
+                    Este tipo de comportamento pode ser facilmente corrigido com alguns treinamentos<strong>:</strong> o
+                    adestramento costuma ser muito eficaz para evitar que seu pet fique exaltado sem necessidade. Inclusive, o cão
+                    salsicha pode acabar ficando mal acostumado se não receber limites, já que a tendência é que eles
+                    criem suas próprias regras na rotina. Latidos e rosnadas podem se tornar comuns em qualquer ameaça,
+                    mas dificilmente partem para o ataque. O adestramento pode deixar esse processo mais tranquilo.</p>
+            </article>
+            <article>
+                <h4 class="fill">Cuidados com a pelagem do cachorro salsicha</h4>
+                <p class="fill">
+                    O Dachshund é uma raça que pode apresentar até três tipos de pelagem<strong>:</strong> curto, duro e longo.
+                    Além disso, a coloração pode ser mais uniforme, bicolor e até manchada - uma forma comum é a pelagem do
+                    Dachshund arlequim, com uma base escura e manchas mais claras. O cuidado e escovação vai depender
+                    justamente do tamanho dos pelos. Os cães com a pelagem curta precisam de uma escovação por semana e
+                    a tosa pode ser necessária de tempos em tempos (é importante sempre observar o seu bichinho). Já os
+                    cachorros com pelos mais duros ou longos precisam ser escovados de duas a três vezes por semana para
+                    evitar o embaraçamento. Neste caso, as tosas devem ser mais frequentes também.</p>
+            </article>
+            <article>
+                <h4 class="fill">Alimentação e passeios</h4>
+                <p class="fill">
+                    A alimentação é essencial para manter a saúde do seu cachorro da raça salsicha. Por
+                    isso, o seu amigo deve ser alimentado de duas a três vezes por dia - a quantidade vai variar de acordo com o
+                    peso e tamanho. Pensar na qualidade dos produtos também é importante! O ideal é oferecer ao seu pet
+                    uma ração super premium, que garantirá a nutrição completa e necessária para a manutenção da saúde. Se
+                    tiver dúvidas entre marcas e quantidade, você pode fazer uma visitinha ao veterinário para conversar e
+                    entender melhor as necessidades do seu cachorro.</p>
+                <p class="fill" style="margin-top: 20px;">
+                    Com energia de sobra para pular, brincar e correr pelos lugares, sair para passear com o
+                    seu cachorro salsicha pode ser uma grande aventura! Elétricos, eles adoram fazer caminhadas ao ar
+                    livre e explorar parques e florestas. Se você mora próximo a um lugar parecido, fica a dica para
+                    curtir o fim de semana com o seu companheiro da melhor forma.</p>
+                <p class="fill" style="margin-top: 20px;">
+                    Com a correria do dia a dia, esse tipo de passeio nem sempre é possível, mas ainda assim
+                    é muito importante que você tire pelo menos um tempinho do seu dia para dar uma voltinha com ele,
+                    mesmo que seja no quarteirão da sua rua. O ideal é que a caminhada aconteça pelo menos duas vezes ao
+                    dia, e não vai demandar muito tempo: 10 minutinhos já são mais do que suficientes para que ele
+                    satisfaça suas necessidades e gaste um pouquinho da energia acumulada. Como qualquer raça de
+                    cachorro, o pote de água deve estar sempre cheio e com água limpa e fresca - até mesmo porque os
+                    cães da raça salsicha são super energéticos e precisam se hidratar com frequência.</p>
+            </article>
+            <article>
+                <h4 class="fill">Cuidados com a saúde</h4>
+                <p class="fill">
+                    Em relação à saúde do Dachshund, alguns cuidados são essenciais<strong>:</strong> por causa do corpo muito comprido
+                    e patas mais curtas, o cachorro salsicha está mais propenso a desenvolver problemas na coluna.
+                    A doença mais comum é o acometimento do disco invertebral do animal, decorrente de movimentos simples,
+                    como subir e descer escadas. Para evitar esse tipo de problema, pode ser necessária a instalação de
+                    rampas que facilitem o acesso a camas, sofás e até outros andares da casa. Essa atitude pode
+                    preservar a saúde do seu cãozinho! A obesidade pode ser um fator sério no cão dachshund.
+                    O sobrepeso faz com que a sua coluna sofra maior pressão, o que consequentemente pode
+                    trazer mais problemas para esta parte do corpo do animal.</p>
+                <p class="fill" style="margin-top: 20px;">
+                    Não é só a coluna do Dachshund que merece a sua atenção. Veja outros cuidados importantes<strong>:</strong></p>
+                <p class="fill" style="margin-top: 20px;">
+                    • Banho<strong>:</strong> A raça não demanda banhos frequentes, a não ser que o bichinho tenha se sujado em 
+                    alguma de suas aventuras;<br>
+                    • Orelhas<strong>:</strong> As orelhas caídas do seu cãozinho também precisam de um cuidado especial, já que fungos,
+                    bactérias e ácaros podem se instalar facilmente no local, ocasionando otites e outros problemas mais sérios;<br>
+                    • Unhas<strong>:</strong> Outro ponto importante é não deixar as unhas do seu pet muito grandes. A dica é começar a cortá-las
+                    desde cedo, sendo recomendado de uma a duas vezes por mês;<br>
+                    • Dentes<strong>:</strong> A saúde bucal do seu bichinho também pode ser afetada por tártaro e outras bactérias, sabia?
+                    O indicado é que haja a escovação com regularidade.</p>    
+            </article>
+        </div>
 </body>
 
 </html>
