"Tipos" section done

--- a/index.html
+++ b/index.html
@@ -20,16 +20,17 @@
         <div class="main-content menu-content">
             <a href="#"><img class="logo" src="assets/img/logo-3.png" alt="Tico"></a>
 
-            <div class="triangulo"></div>
+            <div class="triangle"></div>
 
-            <div class="balao">
+            <div class="baloon">
                 <p> au au!</p>
             </div>
 
             <nav>
                 <ul>
                     <li><a href="#sobre">Sobre</a></li>
-                    <li><a href="#">Tipos</a></li>
+                    <li><a href="#tipos">Tipos</a></li>
+                    <li><a href="#cores">Cores</a></li>
                     <li><a href="#">Fotos</a></li>
                     <li><a href="#">Tico</a></li>
                     <li><a href="#">Contato</a></li>
@@ -55,11 +56,8 @@
                 características, cuidados e comportamentos sobre o cachorro salsicha.</p>
     </section>
 
-    <div class="spacing"></div>
-
     <section id="sobre" class="section white-bg">
-
-        <div class="text-spacing">
+        <div class="text-spacing" style="padding-top: 95px;">
             <article>
                 <h4 class="fill">Cães da raça podem ter relação de amor e fidelidade com seus tutores</h4>
                 <p class="fill">
@@ -72,6 +70,7 @@
                     forte vínculo com seus donos. Ou seja<strong>:</strong> é um cachorro que sempre estará ao seu lado em todos os
                     momentos!</p>
             </article>
+            
             <article>
                 <h4 class="fill">Personalidade e Comportamento</h4>
                 <p class="fill">
@@ -145,6 +144,61 @@
                     O indicado é que haja a escovação com regularidade.</p>    
             </article>
         </div>
+    </section>
+
+        <section id="tipos" class="section main-bg">
+            <div style="padding-bottom: 66px;">
+                <div class="text-spacing" style="padding-top: 95px;">
+                    <h3>Tipos de pelagens</h3>
+                </div>
+
+                <div class="text-spacing" style="margin-top: 30px;">
+                        <h4>Pelo Curto</h4>
+                            <div class="tipo-pelagem-content">
+                                <img class="imagem-salsicha" src="assets/img/tipo-pelagem/pelo-curto.jpg" alt="Salsichinha de pelo curto">
+                                <p>
+                                    Na Idade Média, os caçadores observaram as vantagens do cão Basset para entrar em tocas mais estreitas. Aparentemente,
+                                    o Dachshund Tekel de Pelo Curto originou-se desta raça a partir do século XIV. Entre os alemães, encontraram-se algumas
+                                    raças de cães que poderiam ter sido cruzadas com o Dachshund velho para se formar como nós o conhecemos. Na Alemanha,
+                                    foi usado como caçador e quando ele partiu para a Grã-Bretanha tornou-se um cão para lazer. Em 1873,
+                                    o Kennel Club reconheceu oficialmente como uma raça. <br>
+                                </p>
+                            </div>
+                            <p style="margin-top: 20px;">
+                                O Dachshund Teckel de Pelo Curto é equilibrado, com uma personalidade forte. Às vezes, é teimoso e muito obstinado.
+                                É um cão muito brincalhão, com iniciativa e bastante extrovertido, mas pode estranhar certas pessoas. A raça convive
+                                muito bem com crianças e idosos. Gosta de ser mimado e recompensado e se adapta facilmente a diferentes contextos.
+                            </p>
+                </div>
+
+                <div class="text-spacing" style="margin-top: 30px;">
+                        <h4>Pelo Longo</h4>
+                            <div class="tipo-pelagem-content">
+                                <img class="tipo-pelagem-longo" src="assets/img/tipo-pelagem/pelo-longo.jpg" alt="Salsichinha de pelo longo">
+                                <p style="margin-top: 20px;">
+                                    O dachshund teckel de pelo longo começou a ser visto em xilogravuras encontradas no século 16.
+                                    Depois de muitos cruzamentos e muita história, a raça passou a conquistar o coração das pessoas após
+                                    a década de 1910, quando se tornaram um dos cachorros mais populares da América. <br> <br>
+                                    É necessária uma maior quantidade de banhos e até escovações, devido ao tamanho e volume de seus pelos.
+                                </p>
+                            </div>
+                </div>
+
+                <div class="text-spacing" style="margin-top: 30px;">
+                    <h4>Pelo Duro</h4>
+                        <div class="tipo-pelagem-content">
+                            <img class="imagem-salsicha" src="assets/img/tipo-pelagem/pelo-duro.jpg" alt="Salsichinha de pelo duro">
+                            <p style="margin-top: 85px;">
+                                O dachshund ou salsichinha de pelo duro compartilha de quase todas as características do de pelo curto,
+                                a diferença está na própria pelagem, com o de pelo duro tendo-a mais colada ao corpo.
+                            </p>
+                        </div>
+                </div>
+            </div>
+        </section>    
+        
+
+
 </body>
 
 </html>
